--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "6.16.1",
     "@types/node": "^24.5.0",
     "date-fns": "^4.1.0",
-    "fastify": "^5.6.0"
+    "fastify": "^5.6.0",
+    "zod": "^4.1.9"
   }
 }
